--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -130,9 +130,9 @@ $ciao-minor-icon: $ciao-icon-minor-alt;
   margin: 0 auto;
 }
 
-.chevron-right:before {
-  content: $ciao-chevron-right;
-}
+// .chevron-right:before {
+//   content: $ciao-chevron-right;
+// }
 
 @import "bootstrap/scss/bootstrap.scss";
 
